Added input keys

--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,6 +65,22 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[/Script/UnrealEd.LevelEditorViewportSettings]
+CurrentPosGridSize=1
+bInvertMouseLookYAxis=False
+bInvertOrbitYAxis=False
+bInvertMiddleMousePan=False
+SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
+bEnableLayerSnap=False
+ActiveSnapLayerIndex=0
+PreserveNonUniformScale=False
+HoverHighlightIntensity=0.000000
+PreviewMeshes=/Engine/EditorMeshes/ColorCalibrator/SM_ColorCalibrator.SM_ColorCalibrator
+BillboardScale=1.000000
+TransformWidgetSizeAdjustment=0
+bSaveEngineStats=False
+MeasuringToolUnits=MeasureUnits_Centimeters
+
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 
@@ -223,6 +239,24 @@ CameraActor.Activation=True
 CameraActor.Cooking=True
 CameraActor.Replication=True
 CameraActor.Actor=True
+Tank_C.Tick=True
+Tank_C.Rendering=True
+Tank_C.Replication=True
+Tank_C.Input=True
+Tank_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
@@ -235,5 +269,8 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[ContentBrowserRecent]
+MRUItem0=/Game/TopDownBP/Character/Tank
 
 
