remapped input bindings from axis to actions
to prevent unnecesary if checks

--- a/TankLeague/Config/DefaultInput.ini
+++ b/TankLeague/Config/DefaultInput.ini
@@ -48,14 +48,14 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="p1 jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="p2 shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
 +ActionMappings=(ActionName="p2 jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
-+AxisMappings=(AxisName="p1 forward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="p1 right",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="p1 left",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="p1 backwards",Scale=1.000000,Key=S)
-+AxisMappings=(AxisName="p2 forward",Scale=1.000000,Key=NumPadEight)
-+AxisMappings=(AxisName="p2 right",Scale=1.000000,Key=NumPadSix)
-+AxisMappings=(AxisName="p2 left",Scale=1.000000,Key=NumPadFour)
-+AxisMappings=(AxisName="p2 backwards",Scale=1.000000,Key=NumPadFive)
++ActionMappings=(ActionName="p1 forward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="p1 right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="p1 left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="p1 backwards",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="p2 forward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadEight)
++ActionMappings=(ActionName="p2 right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadSix)
++ActionMappings=(ActionName="p2 left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadFour)
++ActionMappings=(ActionName="p2 backwards",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadFive)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
