Added tank and tank movement, edited game mode

--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,6 +207,8 @@ LastLevel=/Game/TankLeagueMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
+OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -965,6 +967,9 @@ REINST_tank2_C_145.Rendering=True
 REINST_tank2_C_145.Replication=True
 REINST_tank2_C_145.Input=True
 REINST_tank2_C_145.Actor=True
+StaticMeshComponent.HLOD=True
+BoolProperty.Variable=True
+FloatProperty.Variable=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
@@ -980,21 +985,21 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[11]\" "
+InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[7]\" "
 Object=
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/tank3
-MRUItem1=/Game/Blueprints/tank2
-MRUItem2=/Game/Blueprints/tankgamemode
-MRUItem3=/Game/Blueprints/TankBak
-MRUItem4=/Game/TankLeagueMap
-MRUItem5=/Game/VehicleBP/Sedan/Sedan
-MRUItem6=/Game/Blueprints/MainPlayerController
-MRUItem7=/Game/Blueprints/TankUnit
+MRUItem0=/Game/Blueprints/tankgamemode
+MRUItem1=/Game/Blueprints/TankUnit
+MRUItem2=/Game/Blueprints/tank3
+MRUItem3=/Game/Blueprints/tank2
+MRUItem4=/Game/Blueprints/TankBak
+MRUItem5=/Game/TankLeagueMap
+MRUItem6=/Game/VehicleBP/Sedan/Sedan
+MRUItem7=/Game/Blueprints/MainPlayerController
 MRUItem8=/Game/Blueprints/NewPlayerController
 MRUItem9=/Game/TopDownBP/Character/Tank
 
