Added movement physics to the tank

--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,6 +177,8 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
+BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/VehicleBP
@@ -208,7 +210,6 @@ LastLevel=/Game/TankLeagueMap
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
-OpenAssetsAtExit=/Game/Blueprints/tankgamemode.tankgamemode
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -970,6 +971,22 @@ REINST_tank2_C_145.Actor=True
 StaticMeshComponent.HLOD=True
 BoolProperty.Variable=True
 FloatProperty.Variable=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+TankUnit_C.Default=True
+K2Node_GetInputAxisValue.Input=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.DefaultValueCategory=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
@@ -992,8 +1009,8 @@ Object=
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/tankgamemode
-MRUItem1=/Game/Blueprints/TankUnit
+MRUItem0=/Game/Blueprints/TankUnit
+MRUItem1=/Game/Blueprints/tankgamemode
 MRUItem2=/Game/Blueprints/tank3
 MRUItem3=/Game/Blueprints/tank2
 MRUItem4=/Game/Blueprints/TankBak
