--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
@@ -179,6 +179,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/VehicleBP
@@ -209,7 +210,6 @@ LastLevel=/Game/TankLeagueMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -987,8 +987,25 @@ TankUnit_C.Default=True
 K2Node_GetInputAxisValue.Input=True
 BoolProperty.DefaultValueCategory=True
 FloatProperty.DefaultValueCategory=True
+Ball_C.Tick=True
+Ball_C.Rendering=True
+Ball_C.Replication=True
+Ball_C.Input=True
+Ball_C.Actor=True
+Ball_C.TransformCommon=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Actor=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Ball.Ball;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprints/NewBlueprint.NewBlueprint;
@@ -1011,14 +1028,15 @@ LastLogListing=MapCheck
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/TankUnit
 MRUItem1=/Game/Blueprints/tankgamemode
-MRUItem2=/Game/Blueprints/tank3
-MRUItem3=/Game/Blueprints/tank2
-MRUItem4=/Game/Blueprints/TankBak
-MRUItem5=/Game/TankLeagueMap
-MRUItem6=/Game/VehicleBP/Sedan/Sedan
-MRUItem7=/Game/Blueprints/MainPlayerController
-MRUItem8=/Game/Blueprints/NewPlayerController
-MRUItem9=/Game/TopDownBP/Character/Tank
+MRUItem2=/Game/Blueprints/Ball
+MRUItem3=/Game/Blueprints/tank3
+MRUItem4=/Game/Blueprints/tank2
+MRUItem5=/Game/Blueprints/TankBak
+MRUItem6=/Game/TankLeagueMap
+MRUItem7=/Game/VehicleBP/Sedan/Sedan
+MRUItem8=/Game/Blueprints/MainPlayerController
+MRUItem9=/Game/Blueprints/NewPlayerController
+MRUItem10=/Game/TopDownBP/Character/Tank
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=False
@@ -1035,6 +1053,7 @@ Blueprint.ClassOptions=True
 /Game/Blueprints/tankgamemode.tankgamemode=1
 /Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap=1
 /Game/Blueprints/tank3.tank3=1
+/Game/Blueprints/Ball.Ball=1
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
