Added tank model, tank materials, the second tank and shooting

--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,6 +210,7 @@ LastLevel=/Game/TankLeagueMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1003,8 +1004,103 @@ Brush.Actor=True
 Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+FbxExportOption.Exporter=True
+FbxExportOption.Mesh=True
+FbxExportOption.StaticMesh=True
+FbxExportOption.Animation=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+bullet_C.Tick=True
+bullet_C.Rendering=True
+bullet_C.Replication=True
+bullet_C.Input=True
+bullet_C.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+bumper_C.Tick=True
+bumper_C.Rendering=True
+bumper_C.Replication=True
+bumper_C.Input=True
+bumper_C.Actor=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+bumper_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/bumper.bumper;
 RecentlyPlaced=/Game/Blueprints/Ball.Ball;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1026,22 +1122,28 @@ Object=
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/TankUnit
-MRUItem1=/Game/Blueprints/tankgamemode
-MRUItem2=/Game/Blueprints/Ball
-MRUItem3=/Game/Blueprints/tank3
-MRUItem4=/Game/Blueprints/tank2
-MRUItem5=/Game/Blueprints/TankBak
-MRUItem6=/Game/TankLeagueMap
-MRUItem7=/Game/VehicleBP/Sedan/Sedan
-MRUItem8=/Game/Blueprints/MainPlayerController
-MRUItem9=/Game/Blueprints/NewPlayerController
-MRUItem10=/Game/TopDownBP/Character/Tank
+MRUItem0=/Game/Blueprints/bumper
+MRUItem1=/Game/Blueprints/TankUnit
+MRUItem2=/Game/red
+MRUItem3=/Game/blue
+MRUItem4=/Game/Blueprints/Ball
+MRUItem5=/Game/Blueprints/bullet
+MRUItem6=/Game/tank
+MRUItem7=/Game/Blueprints/tankgamemode
+MRUItem8=/Game/Blueprints/tank3
+MRUItem9=/Game/Blueprints/tank2
+MRUItem10=/Game/Blueprints/TankBak
+MRUItem11=/Game/TankLeagueMap
+MRUItem12=/Game/VehicleBP/Sedan/Sedan
+MRUItem13=/Game/Blueprints/MainPlayerController
+MRUItem14=/Game/Blueprints/NewPlayerController
+MRUItem15=/Game/TopDownBP/Character/Tank
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=False
 SimpleWheeledVehicleMovementComponent.VehicleInput=True
 Blueprint.ClassOptions=True
+Brush.Geometry=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/NewPlayerController.NewPlayerController=1
@@ -1054,6 +1156,10 @@ Blueprint.ClassOptions=True
 /Game/TankLeagueMap.TankLeagueMap:PersistentLevel.TankLeagueMap=1
 /Game/Blueprints/tank3.tank3=1
 /Game/Blueprints/Ball.Ball=1
+/Game/Blueprints/bullet.bullet=1
+/Game/tank.tank=1
+/Game/blue.blue=1
+/Game/red.red=1
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
@@ -1723,5 +1829,143 @@ BlueprintGraph.TimeStamp=2019.09.19-12.56.41
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2019.09.19-12.57.17
 ExternalImagePicker.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Export_UI_Option_FbxExportOption]
+FbxExportCompatibility=FBX_2013
+bASCII=False
+bForceFrontXAxis=False
+VertexColor=True
+LevelOfDetail=True
+Collision=True
+MapSkeletalMotionToRoot=False
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
