Added bumpers and made collision channels

--- a/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TankLeague/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,8 +177,8 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings.p1 shoot,InputSettings.Bindings.ActionMappings.p1 jump,InputSettings.Bindings.ActionMappings.p2 shoot,InputSettings.Bindings.ActionMappings.p2 jump,InputSettings.Bindings.AxisMappings.p1 forward,InputSettings.Bindings.AxisMappings.p1 right,InputSettings.Bindings.AxisMappings.p1 left,InputSettings.Bindings.AxisMappings.p1 backwards,InputSettings.Bindings.AxisMappings.p2 forward,InputSettings.Bindings.AxisMappings.p2 right,InputSettings.Bindings.AxisMappings.p2 left,InputSettings.Bindings.AxisMappings.p2 backwards,InputSettings.Bindings.ActionMappings.p1 forward,InputSettings.Bindings.ActionMappings.p1 right,InputSettings.Bindings.ActionMappings.p1 left,InputSettings.Bindings.ActionMappings.p1 backwards,InputSettings.Bindings.ActionMappings.p2 forward,InputSettings.Bindings.ActionMappings.p2 right,InputSettings.Bindings.ActionMappings.p2 left,InputSettings.Bindings.ActionMappings.p2 backwards,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
-BoxComponent=BoxComponent.Physics.ConstraintsGroup,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
@@ -210,7 +210,6 @@ LastLevel=/Game/TankLeagueMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/TankUnit.TankUnit
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1098,6 +1097,12 @@ ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
 bumper_C.TransformCommon=True
+K2Node_VariableSet.Events=True
+bumper_C.Default=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+Actor.Rendering=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/bumper.bumper;
@@ -1117,33 +1122,40 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[7]\" "
 Object=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/bumper
 MRUItem1=/Game/Blueprints/TankUnit
-MRUItem2=/Game/red
-MRUItem3=/Game/blue
-MRUItem4=/Game/Blueprints/Ball
-MRUItem5=/Game/Blueprints/bullet
-MRUItem6=/Game/tank
-MRUItem7=/Game/Blueprints/tankgamemode
-MRUItem8=/Game/Blueprints/tank3
-MRUItem9=/Game/Blueprints/tank2
-MRUItem10=/Game/Blueprints/TankBak
-MRUItem11=/Game/TankLeagueMap
-MRUItem12=/Game/VehicleBP/Sedan/Sedan
-MRUItem13=/Game/Blueprints/MainPlayerController
-MRUItem14=/Game/Blueprints/NewPlayerController
-MRUItem15=/Game/TopDownBP/Character/Tank
+MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem3=/Game/Blueprints/Ball
+MRUItem4=/Game/red
+MRUItem5=/Game/blue
+MRUItem6=/Game/Blueprints/bullet
+MRUItem7=/Game/tank
+MRUItem8=/Game/Blueprints/tankgamemode
+MRUItem9=/Game/Blueprints/tank3
+MRUItem10=/Game/Blueprints/tank2
+MRUItem11=/Game/Blueprints/TankBak
+MRUItem12=/Game/TankLeagueMap
+MRUItem13=/Game/VehicleBP/Sedan/Sedan
+MRUItem14=/Game/Blueprints/MainPlayerController
+MRUItem15=/Game/Blueprints/NewPlayerController
+MRUItem16=/Game/TopDownBP/Character/Tank
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=False
 SimpleWheeledVehicleMovementComponent.VehicleInput=True
 Blueprint.ClassOptions=True
 Brush.Geometry=True
+BoxComponent.Collision=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/NewPlayerController.NewPlayerController=1
@@ -1160,6 +1172,8 @@ Brush.Geometry=True
 /Game/tank.tank=1
 /Game/blue.blue=1
 /Game/red.red=1
+/Game/Blueprints/bumper.bumper=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
