Added main, pause menu and updated gitignore to ignore generated files

--- a/TankLeague 4.23/Config/DefaultEngine.ini
+++ b/TankLeague 4.23/Config/DefaultEngine.ini
@@ -1,16 +1,6 @@
 [URL]
 GameName=TankLeague
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TankLeagueMap.TankLeagueMap
-GameDefaultMap=/Game/TankLeagueMap.TankLeagueMap
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
 bDistinctlyDrawTilesBeingBuilt=True
@@ -128,6 +118,21 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="dsad",NewName="Player_and_ball")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/TankLeagueMap.TankLeagueMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/TankLeagueMap.TankLeagueMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/MainMenuAssets/MainMenuMode.MainMenuMode_C
+GlobalDefaultServerGameMode=None
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -173,3 +178,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+
