Edit build settings to include both game as menu maps

--- a/TankLeague 4.23/Config/DefaultEngine.ini
+++ b/TankLeague 4.23/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TankLeagueMap.TankLeagueMap
+GameDefaultMap=/Game/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/MainMenuAssets/MainMenuMode.MainMenuMode_C
 GlobalDefaultServerGameMode=None
